Rewrites routes and fixes schools page

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -3,13 +3,13 @@
     <p class="lead">This is another placeholder message</p>
 <div class="row">
     <div class="col-md-4">
-        <%= button_to "Teachers Workshops", parents_joinaclub_path, method: :get, class: "btn btn-lg btn-secondary-outline" %>
+        <%= button_to "Teachers Workshops", schools_teachersworkshops_path , method: :get, class: "btn btn-lg btn-secondary-outline" %>
     </div>
     <div class="col-md-4">
-        <%= button_to "Book a Session", parents_bookasession_path, method: :get, class: "btn btn-lg btn-secondary-outline" %>
+        <%= button_to "Students Workshops", schools_studentsworkshops_path, method: :get, class: "btn btn-lg btn-secondary-outline" %>
     </div>
     <div class="col-md-4">
-        <%= button_to "Make a Club", parents_makeaclub_path, method: :get, class: "btn btn-lg btn-secondary-outline" %>
+        <%= button_to "Book a Kit", schools_bookakit_path, method: :get, class: "btn btn-lg btn-secondary-outline" %>
     </div>
 </div>
 
