--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,9 +1,10 @@
-<div class="jumbotron container">
+<div class="jumbotron container" style="color:white; background-color:rgba(30,32,31,0.7);">
     <h1 class="display-3">Schools</h1>
     <p class="lead">This is another placeholder message</p>
+    <br><br><br><br><br><br><br>
 <div class="row">
     <div class="col-md-4">
-        <%= button_to "Teachers Workshops", schools_teachersworkshops_path , method: :get, class: "btn btn-lg btn-secondary-outline" %>
+        <%= button_to "Teachers Workshops", schools_teachersworkshops_path , method: :get, class: "btn btn-lg btn-secondary-outline"%>
     </div>
     <div class="col-md-4">
         <%= button_to "Students Workshops", schools_studentsworkshops_path, method: :get, class: "btn btn-lg btn-secondary-outline" %>
@@ -16,7 +17,7 @@
 </div>
 <script>
     $(document).ready(function(){
-        $.backstretch("<%= asset_path('schools.png') %>");
+        $.backstretch("<%= asset_path('schools.jpg') %>");
 });
 </script>
 
